--- a/index.html
+++ b/index.html
@@ -5,78 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu site Pet</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>Site Meu  Pet</title>
 </head>
 
-<body style="font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: #B0E0E6;">
-    <!--Cria a tabela para definir a estrutura do site-->
-    <table align="center" width="100%" bgcolor="#B0E0E6">
-        <!--Linha 1-->
-        <tr>
-            <td>
-                <img width="100%" src="banner.png" alt="banner do site." title="Meu Pet">
-            </td>
-        </tr>
+<body>
 
-        <!--Linha 2-->
-        <tr>
-            <th>
-                <a href="index.html">HOME</a> &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                <a href="produtos.html">PRODUTOS</a> &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                <a href="contato.html">CONTATO</a> &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                <a href="sobre.html">QUEM SOMOS</a>
-            </th>
-        </tr>
+    <header class="cabecalho">
+        <div class="cabecalho-banner">
+            <img src="banner.png" alt="banner do site." title="Meu Pet">
+        </div>
+        
+        <nav class="navegacao">
+            <div class="navegacao-container">
+                <a class="menu" href="index.html">HOME</a> 
+                <a class="menu" href="produtos.html">PRODUTOS</a>
+                <a class="menu" href="contato.html">CONTATO</a>
+                <a class="menu" href="sobre.html">SOBRE</a>
+            </div>
+        </nav>
+    </header>
 
-        <!--Linha 3-->
-        <tr height="420px" valign="top">
-            <td>
-                <h1>Página Principal</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quo, hic aliquid vero eius, labore
-                    iusto
-                    exercitationem autem veritatis, quaerat molestiae optio repellat similique id unde tenetur
-                    aspernatur
-                    dolores. Culpa?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae cumque a facilis optio amet officiis
-                    dolorum placeat. Labore deleniti, commodi beatae tenetur dicta dolorem, ipsum, asperiores
-                    exercitationem
-                    veniam impedit quas.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus rerum ullam cumque blanditiis,
-                    debitis eaque voluptates consectetur dicta numquam, officiis vel quia harum quae perspiciatis
-                    explicabo
-                    veritatis voluptatum et magnam!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam est et odio quod rerum nemo
-                    consequuntur, voluptatem esse! Assumenda eum, ipsam modi voluptates optio ullam voluptatum velit
-                    odit
-                    commodi voluptatem.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, sequi nam voluptates, odio delectus
-                    omnis perspiciatis excepturi porro velit eligendi officia, modi tempora quam quibusdam facilis nulla
-                    dolor recusandae earum!
-                </p>
-            </td>
-        </tr>
+    <main class="conteudo">
+        <div class="conteudo-continer">
+            <h1>Página Principal</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quo, hic aliquid vero eius, labore
+                iusto
+                exercitationem autem veritatis, quaerat molestiae optio repellat similique id unde tenetur
+                aspernatur
+                dolores. Culpa?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae cumque a facilis optio amet officiis
+                dolorum placeat. Labore deleniti, commodi beatae tenetur dicta dolorem, ipsum, asperiores
+                exercitationem
+                veniam impedit quas.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus rerum ullam cumque blanditiis,
+                debitis eaque voluptates consectetur dicta numquam, officiis vel quia harum quae perspiciatis
+                explicabo
+                veritatis voluptatum et magnam!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam est et odio quod rerum nemo
+                consequuntur, voluptatem esse! Assumenda eum, ipsam modi voluptates optio ullam voluptatum velit
+                odit
+                commodi voluptatem.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, sequi nam voluptates, odio delectus
+                omnis perspiciatis excepturi porro velit eligendi officia, modi tempora quam quibusdam facilis nulla
+                dolor recusandae earum!
+            </p>
+        </div>
+    </main>
 
-        <!--Linha 4-->
-        <tr>
-            <td height="50px" bgcolor="#4682B4">
-                <font>
-                    Entre em contato através do e-mail: contato@meupet.com.br
-                    <br>
-                    ou utilize nosso telefone de contato(whatsapp): (94)99999-9999
-                </font>
-            </td>
-        </tr>
+    <footer class="rodape">
+        <div class="rodape-container">
+            <p>
+                Entre em contato através do e-mail: <a href="#">www.meupet.com.br</a>
+                <br>
+                ou utilize nosso telefone de contato(whatsapp): (94)99999-9999
+            </p>
+        </div>
+    </footer>
 
-    </table>
+    
 </body>
 
 </html>
